<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/layoutAvaya"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/app_background"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">
        <TextView
            android:id="@+id/txtViewVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="5dp"
            android:text="@string/sdk_version"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/avaya_logo_mobile" />

        <TextView
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal"
            android:text="@string/login_username"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/login_username_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="@string/username_value"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/login_displayname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center|center_horizontal"
            android:text="@string/login_display_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />


        <EditText
            android:id="@+id/login_displayname_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@string/display_name_value"
            android:textAppearance="?android:attr/textAppearanceMediumInverse"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/login_server"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center|center_horizontal"
            android:text="@string/login_server"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/login_server_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@string/server_value"
            android:textColor="@color/white" />

        <Switch
            android:id="@+id/login_media_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp" />

        <TextView
            android:id="@+id/login_media_type_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center|center_horizontal"
            android:text="@string/login_media_type"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:onClick="login"
            android:text="@string/login_button" />

        <TextView
            android:id="@+id/version_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>



    <LinearLayout
        android:id="@+id/layoutImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:background="@color/white"
        android:orientation="horizontal">
        <!--<ImageView-->
            <!--android:id="@+id/octoGif"-->
            <!--android:layout_width="100dp"-->
            <!--android:layout_height="100dp"-->
            <!--android:layout_gravity="center"-->
            <!--android:layout_marginLeft="150dp"-->
            <!--android:src="@drawable/adaocto_loading_min"/>-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <!--<TextView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center"-->
                <!--android:gravity="center"-->
                <!--android:text="Please Wait..."-->
                <!--android:textColor="@color/black"-->
                <!--android:textSize="20dp"/>-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center">
                <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>


