<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:gravity="center_horizontal"
    android:visibility="visible"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dial_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/dial_number"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/dial_number_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:inputType="text"
        android:textColor="@color/white"
        android:text="@string/dial_number_value" />

    <TextView
        android:id="@+id/uui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:maxLength="128"
        android:text="@string/uui"
        android:textColor="@color/white"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/uui_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textColor="@color/white"
        android:inputType="text" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <ImageButton
            android:id="@+id/btnAudioCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_centerInParent="true"
            android:background="@drawable/btn_transparent"
            android:onClick="dialAudioOnly"
            android:src="@drawable/call" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:onClick="logout"
            android:text="@string/logout_button" />
    </LinearLayout>

</LinearLayout>