<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:visibility="gone">

    <TextView
        android:id="@+id/dial_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/dial_number"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/dial_number_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:inputType="text"
        android:text="@string/dial_number_value"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/uui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:maxLength="128"
        android:text="@string/uui"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/uui_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:inputType="text"
        android:text="ABCD1234"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <ImageButton
            android:id="@+id/btnVideoCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/btn_transparent"
            android:onClick="dialVideo"
            android:paddingTop="16dp"
            android:src="@drawable/videocall" />

        <ImageButton
            android:id="@+id/one_way_video_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_transparent"
            android:onClick="dialOneWayVideo"
            android:src="@drawable/onewayvideo" />

        <ImageButton
            android:id="@+id/btnAudioCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_transparent"
            android:onClick="dialAudio"
            android:src="@drawable/call" />
    </LinearLayout>

    <TextView
        android:id="@+id/resolution_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="20dp"
        android:text="@string/available_resolutions"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <Spinner
        android:id="@+id/resolution_spinner"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="50dp"
            android:layout_weight="1"
            android:onClick="logout"
            android:text="@string/logout_button" />
    </LinearLayout>

</LinearLayout>